지니 설정가이드 REAL 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ContactActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".Setting_guide"></activity>
+        <activity android:name=".ContactActivity" />
         <activity android:name=".ButtonActivity" />
         <activity android:name=".AuthorityActivity" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
