--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Setting_guide"></activity>
+        <activity android:name=".Medical_information"></activity>
+        <activity android:name=".Setting_guide" />
         <activity android:name=".ContactActivity" />
         <activity android:name=".ButtonActivity" />
         <activity android:name=".AuthorityActivity" />
