--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name=".emergency_widget">
+        <receiver android:name=".emergency_widget"
+            android:label="119 긴급문자" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -22,7 +23,8 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/emergency_widget_info" />
         </receiver>
-        <receiver android:name=".AppWidget">
+        <receiver android:name=".AppWidget"
+            android:label="보호자 긴급문자" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
